# Aviato-Project

./: README.md  pyproject.toml
aviato/aviato/: settings.py  urls.py
aviato/core/: admin.py  api.py  models.py  serializer.py  urls.py
aviato/core/migrations/: 0001_initial.py
