[tool.poetry]
name = "aviato-project"
version = "0.1.0"
description = ""
authors = ["Rajat Arora <arora_rajat@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
psycopg = "^3.2.2"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
